--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -6,72 +6,71 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         card_view:cardCornerRadius="2dp"
-        android:layout_margin="8dp"
-        android:background="#80000000">
+        android:layout_margin="16dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#80000000">
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/no_poster"
+                android:contentDescription="@string/no_poster"
+                android:scaleType="centerCrop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                
+                android:src="@drawable/w185"/>
             <ImageView
                 android:id="@+id/poster"
-                android:contentDescription="@string/poster_content_description"
+                android:contentDescription="@string/poster_description"
                 android:scaleType="centerCrop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/primary_text"
+                android:padding="8dp"
+                android:layout_toRightOf="@+id/no_poster"
+                android:layout_toEndOf="@+id/no_poster"
+                android:textStyle="bold"
+                android:textSize="15sp"/>
 
             <TextView
-            style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:layout_toRightOf="@+id/poster"
-            android:layout_toEndOf="@+id/poster"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:textColor="@color/icons"/>
-
-            <TextView
-                style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_below="@id/title"
-                android:layout_toRightOf="@+id/poster"
-                android:layout_toEndOf="@+id/poster"
+                android:layout_toRightOf="@+id/no_poster"
+                android:layout_toEndOf="@+id/no_poster"
                 android:textStyle="normal"
-                android:textSize="14sp"
-                android:textColor="@color/icons"/>
-
+                android:textSize="14sp"/>
             <RatingBar
-            android:id="@+id/rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_below="@id/date"
-            android:layout_toRightOf="@+id/poster"
-            android:layout_toEndOf="@+id/poster"
-            style="?android:attr/ratingBarStyleSmall"
-            android:numStars="10"
-            android:stepSize="0.1"/>
-
+                android:id="@+id/rating"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_below="@id/date"
+                android:layout_toRightOf="@+id/no_poster"
+                android:layout_toEndOf="@+id/no_poster"
+                android:numStars="10"
+                android:stepSize="0.1"/>
             <TextView
-                style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
                 android:id="@+id/rating_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text"
                 android:layout_margin="8dp"
                 android:layout_below="@id/date"
                 android:layout_toRightOf="@+id/rating"
                 android:layout_toEndOf="@+id/rating"
                 android:textStyle="normal"
-                android:textSize="12sp"
-                android:textColor="@color/icons"/>
-
+                android:textSize="12sp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
