--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,60 +3,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <ImageView
-        android:id="@+id/poster"
-        android:contentDescription="@string/poster_content_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:scaleType="centerCrop"/>
-    <TextView
-        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/bright_foreground_inverse_material_dark"
-        android:layout_toRightOf="@id/poster"
-        android:layout_toEndOf="@id/poster"/>
-    <TextView
-        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:textStyle="normal"
-        android:textColor="@color/bright_foreground_inverse_material_dark"
-        android:layout_margin="8dp"
-        android:layout_toRightOf="@id/poster"
-        android:layout_toEndOf="@id/poster"
-        android:layout_below="@id/title"/>
+    <FrameLayout
+        android:id="@+id/head"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/no_poster"
+                android:contentDescription="@string/no_poster"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/w342"
+                android:layout_margin="6dp"
+                android:scaleType="centerCrop"/>
+            <ImageView
+                android:id="@+id/poster"
+                android:contentDescription="@string/poster_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_toRightOf="@id/no_poster"
+                android:layout_toEndOf="@id/no_poster"/>
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text"
+                android:textSize="15sp"
+                android:textStyle="normal"
+                android:layout_margin="8dp"
+                android:layout_toRightOf="@id/no_poster"
+                android:layout_toEndOf="@id/no_poster"
+                android:layout_below="@id/title"/>
 
-    <TextView
-        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:id="@+id/genres"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textSize="15sp"
-        android:textColor="@color/bright_foreground_inverse_material_dark"
-        android:layout_toRightOf="@id/poster"
-        android:layout_toEndOf="@id/poster"
-        android:layout_below="@+id/date"/>
+            <TextView
+                android:id="@+id/genres"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text"
+                android:layout_margin="8dp"
+                android:textSize="15sp"
+                android:layout_toRightOf="@id/no_poster"
+                android:layout_toEndOf="@id/no_poster"
+                android:layout_below="@+id/date"/>
 
-    <TextView
-        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:id="@+id/tagline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textSize="15sp"
-        android:textColor="@color/bright_foreground_inverse_material_dark"
-        android:layout_toRightOf="@id/poster"
-        android:layout_toEndOf="@id/poster"
-        android:layout_below="@+id/genres"/>
+            <TextView
+                android:id="@+id/tagline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textSize="15sp"
+                android:layout_toRightOf="@id/no_poster"
+                android:layout_toEndOf="@id/no_poster"
+                android:layout_below="@+id/genres"/>
+        </RelativeLayout>
+    </FrameLayout>
 
     <TextView
         style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
@@ -65,9 +76,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:textSize="15sp"
-        android:textColor="@color/bright_foreground_inverse_material_dark"
         android:lineSpacingMultiplier="1.2"
-        android:layout_below="@id/poster"/>
+        android:layout_below="@id/head"/>
     <View
         android:layout_width="match_parent"
         android:layout_below="@id/overview"
