--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,12 +6,12 @@
     android:background="#80000000">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_containerr"
+        android:id="@+id/swipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#80000000">
         <ListView
-            android:id="@+id/listr"
+            android:id="@+id/list"
             android:background="#80000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -20,7 +20,7 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
-        android:id="@+id/emptyr"
+        android:id="@+id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -29,7 +29,7 @@
 
 
     <TextView
-        android:id="@+id/errorr"
+        android:id="@+id/error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -37,7 +37,7 @@
         android:visibility="gone" />
 
     <ProgressBar
-        android:id="@+id/progressr"
+        android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
