--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,15 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
-        <item name="android:textColor">@color/icons</item>
+        <item name="android:textColor">@color/primary_text</item>
         <item name="android:button">@color/primary</item>
+        <item name="android:colorBackground">@color/background</item>
         <item name="android:windowActionBarOverlay">true</item>
     </style>
 
+    <style name="CustomActionBarTheme"
+        parent="Theme.AppCompat">
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="windowActionBarOverlay">true</item>
+    </style>
 </resources>
