--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -13,26 +13,21 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
-                android:id="@+id/no_poster"
-                android:contentDescription="@string/no_poster"
-                android:scaleType="centerCrop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/w185"/>
-            <ImageView
                 android:id="@+id/poster"
                 android:contentDescription="@string/poster_description"
                 android:scaleType="centerCrop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="92dip"
+                android:layout_height="138dip"
+                android:background="@drawable/w185"
+                />
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary_text"
                 android:padding="8dp"
-                android:layout_toRightOf="@+id/no_poster"
-                android:layout_toEndOf="@+id/no_poster"
+                android:layout_toRightOf="@+id/poster"
+                android:layout_toEndOf="@+id/poster"
                 android:textStyle="bold"
                 android:textSize="15sp"/>
 
@@ -44,8 +39,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_below="@id/title"
-                android:layout_toRightOf="@+id/no_poster"
-                android:layout_toEndOf="@+id/no_poster"
+                android:layout_toRightOf="@+id/poster"
+                android:layout_toEndOf="@+id/poster"
                 android:textStyle="normal"
                 android:textSize="14sp"/>
             <RatingBar
@@ -55,8 +50,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_below="@id/date"
-                android:layout_toRightOf="@+id/no_poster"
-                android:layout_toEndOf="@+id/no_poster"
+                android:layout_toRightOf="@+id/poster"
+                android:layout_toEndOf="@+id/poster"
                 android:numStars="10"
                 android:stepSize="0.1"/>
             <TextView
