--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,38 +2,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backColor"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/backColor"
     tools:context=".LoginActivity">
-        <Button
-            android:id="@+id/vk_auth"
-            android:layout_width="300dp"
-            android:layout_height="100dp"
-            android:layout_centerInParent="true"
-            android:padding="8dp"
-            android:onClick="onVkAuthClick"
-            android:text="@string/button_log_vkauth"/>
-        <Button
-            android:id="@+id/no_auth"
-            android:layout_width="300dp"
-            android:layout_height="100dp"
-            android:layout_centerInParent="true"
-            android:padding="8dp"
-            android:layout_below="@+id/vk_auth"
-            android:onClick="onNoAuthClick"
-            android:text="@string/button_log_noauth"/>
+
+    <Button
+        android:id="@+id/vk_auth"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:onClick="onVkAuthClick"
+        android:padding="8dp"
+        android:text="@string/button_log_vkauth" />
+
+    <Button
+        android:id="@+id/no_auth"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/vk_auth"
+        android:layout_centerInParent="true"
+        android:onClick="onNoAuthClick"
+        android:padding="8dp"
+        android:text="@string/button_log_noauth" />
+
     <Button
         android:id="@+id/alpha"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_centerInParent="true"
-        android:padding="8dp"
         android:layout_above="@+id/vk_auth"
+        android:layout_centerInParent="true"
         android:onClick="onAlphaClick"
-        android:visibility="visible"
-        android:text="@string/button_alpha"/>
+        android:padding="8dp"
+        android:text="@string/button_alpha"
+        android:visibility="gone" />
 
 </RelativeLayout>
